Removed Preview (use Built-in)

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -5,7 +5,6 @@
     "dbaeumer.vscode-eslint",
     "donjayamanne.githistory",
     "liamhammett.inline-parameters",
-    "steoates.autoimport",
-    "searKing.preview-vscode"
+    "steoates.autoimport"
   ]
 }
